# Resume-Application-Tracking-System-ATS--App-Using--Gemini

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
